--- a/wordle.ipynb
+++ b/wordle.ipynb
@@ -8,7 +8,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: quickle in c:\\users\\ndona\\anaconda3\\envs\\wordle\\lib\\site-packages (0.4.0)\n"
+      "Collecting quickle\n",
+      "  Downloading quickle-0.4.0.tar.gz (42 kB)\n",
+      "     ---------------------------------------- 0.0/42.5 kB ? eta -:--:--\n",
+      "     ------------------ ------------------- 20.5/42.5 kB 682.7 kB/s eta 0:00:01\n",
+      "     -------------------------------------- 42.5/42.5 kB 520.9 kB/s eta 0:00:00\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'done'\n",
+      "Building wheels for collected packages: quickle\n",
+      "  Building wheel for quickle (setup.py): started\n",
+      "  Building wheel for quickle (setup.py): finished with status 'error'\n",
+      "  Running setup.py clean for quickle\n",
+      "Failed to build quickle\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  error: subprocess-exited-with-error\n",
+      "  \n",
+      "  python setup.py bdist_wheel did not run successfully.\n",
+      "  exit code: 1\n",
+      "  \n",
+      "  [12 lines of output]\n",
+      "  running bdist_wheel\n",
+      "  running build\n",
+      "  running build_py\n",
+      "  creating build\n",
+      "  creating build\\lib.win-amd64-cpython-311\n",
+      "  creating build\\lib.win-amd64-cpython-311\\tests\n",
+      "  copying tests\\test_quickle.py -> build\\lib.win-amd64-cpython-311\\tests\n",
+      "  copying tests\\test_struct.py -> build\\lib.win-amd64-cpython-311\\tests\n",
+      "  copying tests\\__init__.py -> build\\lib.win-amd64-cpython-311\\tests\n",
+      "  running build_ext\n",
+      "  building 'quickle' extension\n",
+      "  error: Microsoft Visual C++ 14.0 or greater is required. Get it with \"Microsoft C++ Build Tools\": https://visualstudio.microsoft.com/visual-cpp-build-tools/\n",
+      "  [end of output]\n",
+      "  \n",
+      "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
+      "  ERROR: Failed building wheel for quickle\n",
+      "ERROR: Could not build wheels for quickle, which is required to install pyproject.toml-based projects\n"
      ]
     }
    ],
@@ -18,16 +58,62 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-15T00:27:22.868504100Z",
-     "start_time": "2024-04-15T00:27:21.008059800Z"
+     "end_time": "2024-04-15T01:32:24.759375200Z",
+     "start_time": "2024-04-15T01:32:21.311978500Z"
     }
    },
    "id": "32484433a750af5"
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100 12929  100 12929    0     0   241k      0 --:--:-- --:--:-- --:--:--  252k\n",
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100 89129  100 89129    0     0   683k      0 --:--:-- --:--:-- --:--:--  690k\n"
+     ]
+    }
+   ],
+   "source": [
+    "!curl -O https://raw.githubusercontent.com/NathanDonagi/NYT-Game-Solvers/main/answers.txt\n",
+    "!curl -O https://raw.githubusercontent.com/NathanDonagi/NYT-Game-Solvers/main/wordlist.txt"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-15T01:30:14.109086500Z",
+     "start_time": "2024-04-15T01:30:13.855543500Z"
+    }
+   },
+   "id": "2c1658ff2a9cd2fc"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'quickle'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[5], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mcollections\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m defaultdict\n\u001B[1;32m----> 2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mquickle\u001B[39;00m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mos\u001B[39;00m\n\u001B[0;32m      5\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mopen\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mwordlist.txt\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mr\u001B[39m\u001B[38;5;124m'\u001B[39m) \u001B[38;5;28;01mas\u001B[39;00m f:\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'quickle'"
+     ]
+    }
+   ],
    "source": [
     "from collections import defaultdict\n",
     "import quickle\n",
@@ -68,8 +154,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-15T00:27:22.911499200Z",
-     "start_time": "2024-04-15T00:27:22.873543300Z"
+     "end_time": "2024-04-15T01:30:37.851490400Z",
+     "start_time": "2024-04-15T01:30:37.079179600Z"
     }
    },
    "id": "initial_id"
