--- a/wordle.ipynb
+++ b/wordle.ipynb
@@ -2,17 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Collecting quickle\n",
-      "  Downloading quickle-0.4.0.tar.gz (42 kB)\n",
-      "     ---------------------------------------- 0.0/42.5 kB ? eta -:--:--\n",
-      "     ------------------ ------------------- 20.5/42.5 kB 682.7 kB/s eta 0:00:01\n",
-      "     -------------------------------------- 42.5/42.5 kB 520.9 kB/s eta 0:00:00\n",
+      "  Using cached quickle-0.4.0.tar.gz (42 kB)\n",
       "  Preparing metadata (setup.py): started\n",
       "  Preparing metadata (setup.py): finished with status 'done'\n",
       "Building wheels for collected packages: quickle\n",
@@ -31,7 +28,7 @@
       "  python setup.py bdist_wheel did not run successfully.\n",
       "  exit code: 1\n",
       "  \n",
-      "  [12 lines of output]\n",
+      "  [26 lines of output]\n",
       "  running bdist_wheel\n",
       "  running build\n",
       "  running build_py\n",
@@ -43,7 +40,21 @@
       "  copying tests\\__init__.py -> build\\lib.win-amd64-cpython-311\\tests\n",
       "  running build_ext\n",
       "  building 'quickle' extension\n",
-      "  error: Microsoft Visual C++ 14.0 or greater is required. Get it with \"Microsoft C++ Build Tools\": https://visualstudio.microsoft.com/visual-cpp-build-tools/\n",
+      "  creating build\\temp.win-amd64-cpython-311\n",
+      "  creating build\\temp.win-amd64-cpython-311\\Release\n",
+      "  \"C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.39.33519\\bin\\HostX86\\x64\\cl.exe\" /c /nologo /O2 /W3 /GL /DNDEBUG /MD -IC:\\Users\\Ndona\\anaconda3\\envs\\NYT_Solvers\\include -IC:\\Users\\Ndona\\anaconda3\\envs\\NYT_Solvers\\Include \"-IC:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.39.33519\\include\" \"-IC:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Auxiliary\\VS\\include\" \"-IC:\\Program Files (x86)\\Windows Kits\\10\\include\\10.0.22621.0\\ucrt\" \"-IC:\\Program Files (x86)\\Windows Kits\\10\\\\include\\10.0.22621.0\\\\um\" \"-IC:\\Program Files (x86)\\Windows Kits\\10\\\\include\\10.0.22621.0\\\\shared\" \"-IC:\\Program Files (x86)\\Windows Kits\\10\\\\include\\10.0.22621.0\\\\winrt\" \"-IC:\\Program Files (x86)\\Windows Kits\\10\\\\include\\10.0.22621.0\\\\cppwinrt\" /Tcquickle.c /Fobuild\\temp.win-amd64-cpython-311\\Release\\quickle.obj\n",
+      "  quickle.c\n",
+      "  quickle.c(435): warning C4013: 'PyHeapType_GET_MEMBERS' undefined; assuming extern returning int\n",
+      "  quickle.c(435): warning C4047: 'initializing': 'PyMemberDef *' differs in levels of indirection from 'int'\n",
+      "  quickle.c(1574): warning C4013: '_PyFloat_Pack8' undefined; assuming extern returning int\n",
+      "  quickle.c(3479): warning C4013: '_PyFloat_Unpack8' undefined; assuming extern returning int\n",
+      "  \"C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.39.33519\\bin\\HostX86\\x64\\link.exe\" /nologo /INCREMENTAL:NO /LTCG /DLL /MANIFEST:EMBED,ID=2 /MANIFESTUAC:NO /LIBPATH:C:\\Users\\Ndona\\anaconda3\\envs\\NYT_Solvers\\libs /LIBPATH:C:\\Users\\Ndona\\anaconda3\\envs\\NYT_Solvers /LIBPATH:C:\\Users\\Ndona\\anaconda3\\envs\\NYT_Solvers\\PCbuild\\amd64 \"/LIBPATH:C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.39.33519\\lib\\x64\" \"/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\lib\\10.0.22621.0\\ucrt\\x64\" \"/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\\\lib\\10.0.22621.0\\\\um\\x64\" /EXPORT:PyInit_quickle build\\temp.win-amd64-cpython-311\\Release\\quickle.obj /OUT:build\\lib.win-amd64-cpython-311\\quickle.cp311-win_amd64.pyd /IMPLIB:build\\temp.win-amd64-cpython-311\\Release\\quickle.cp311-win_amd64.lib\n",
+      "     Creating library build\\temp.win-amd64-cpython-311\\Release\\quickle.cp311-win_amd64.lib and object build\\temp.win-amd64-cpython-311\\Release\\quickle.cp311-win_amd64.exp\n",
+      "  quickle.obj : error LNK2001: unresolved external symbol _PyFloat_Unpack8\n",
+      "  quickle.obj : error LNK2001: unresolved external symbol PyHeapType_GET_MEMBERS\n",
+      "  quickle.obj : error LNK2001: unresolved external symbol _PyFloat_Pack8\n",
+      "  build\\lib.win-amd64-cpython-311\\quickle.cp311-win_amd64.pyd : fatal error LNK1120: 3 unresolved externals\n",
+      "  error: command 'C:\\\\Program Files (x86)\\\\Microsoft Visual Studio\\\\2022\\\\BuildTools\\\\VC\\\\Tools\\\\MSVC\\\\14.39.33519\\\\bin\\\\HostX86\\\\x64\\\\link.exe' failed with exit code 1120\n",
       "  [end of output]\n",
       "  \n",
       "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
@@ -58,15 +69,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-15T01:32:24.759375200Z",
-     "start_time": "2024-04-15T01:32:21.311978500Z"
+     "end_time": "2024-04-15T01:45:04.366455900Z",
+     "start_time": "2024-04-15T01:44:59.184407500Z"
     }
    },
    "id": "32484433a750af5"
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stderr",
@@ -76,12 +87,12 @@
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
       "\n",
       "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
-      "100 12929  100 12929    0     0   241k      0 --:--:-- --:--:-- --:--:--  252k\n",
+      "100 12929  100 12929    0     0  93362      0 --:--:-- --:--:-- --:--:-- 95066\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
       "\n",
       "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
-      "100 89129  100 89129    0     0   683k      0 --:--:-- --:--:-- --:--:--  690k\n"
+      "100 89129  100 89129    0     0   635k      0 --:--:-- --:--:-- --:--:--  644k\n"
      ]
     }
    ],
@@ -92,8 +103,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-15T01:30:14.109086500Z",
-     "start_time": "2024-04-15T01:30:13.855543500Z"
+     "end_time": "2024-04-15T01:42:42.853470800Z",
+     "start_time": "2024-04-15T01:42:42.479540400Z"
     }
    },
    "id": "2c1658ff2a9cd2fc"
@@ -154,8 +165,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-15T01:30:37.851490400Z",
-     "start_time": "2024-04-15T01:30:37.079179600Z"
+     "end_time": "2024-04-15T01:42:46.724910100Z",
+     "start_time": "2024-04-15T01:42:45.628060200Z"
     }
    },
    "id": "initial_id"
