fixing package version

--- a/wordle.ipynb
+++ b/wordle.ipynb
@@ -2,64 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Collecting quickle\n",
-      "  Using cached quickle-0.4.0.tar.gz (42 kB)\n",
-      "  Preparing metadata (setup.py): started\n",
-      "  Preparing metadata (setup.py): finished with status 'done'\n",
-      "Building wheels for collected packages: quickle\n",
-      "  Building wheel for quickle (setup.py): started\n",
-      "  Building wheel for quickle (setup.py): finished with status 'error'\n",
-      "  Running setup.py clean for quickle\n",
-      "Failed to build quickle\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  error: subprocess-exited-with-error\n",
-      "  \n",
-      "  python setup.py bdist_wheel did not run successfully.\n",
-      "  exit code: 1\n",
-      "  \n",
-      "  [26 lines of output]\n",
-      "  running bdist_wheel\n",
-      "  running build\n",
-      "  running build_py\n",
-      "  creating build\n",
-      "  creating build\\lib.win-amd64-cpython-311\n",
-      "  creating build\\lib.win-amd64-cpython-311\\tests\n",
-      "  copying tests\\test_quickle.py -> build\\lib.win-amd64-cpython-311\\tests\n",
-      "  copying tests\\test_struct.py -> build\\lib.win-amd64-cpython-311\\tests\n",
-      "  copying tests\\__init__.py -> build\\lib.win-amd64-cpython-311\\tests\n",
-      "  running build_ext\n",
-      "  building 'quickle' extension\n",
-      "  creating build\\temp.win-amd64-cpython-311\n",
-      "  creating build\\temp.win-amd64-cpython-311\\Release\n",
-      "  \"C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.39.33519\\bin\\HostX86\\x64\\cl.exe\" /c /nologo /O2 /W3 /GL /DNDEBUG /MD -IC:\\Users\\Ndona\\anaconda3\\envs\\NYT_Solvers\\include -IC:\\Users\\Ndona\\anaconda3\\envs\\NYT_Solvers\\Include \"-IC:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.39.33519\\include\" \"-IC:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Auxiliary\\VS\\include\" \"-IC:\\Program Files (x86)\\Windows Kits\\10\\include\\10.0.22621.0\\ucrt\" \"-IC:\\Program Files (x86)\\Windows Kits\\10\\\\include\\10.0.22621.0\\\\um\" \"-IC:\\Program Files (x86)\\Windows Kits\\10\\\\include\\10.0.22621.0\\\\shared\" \"-IC:\\Program Files (x86)\\Windows Kits\\10\\\\include\\10.0.22621.0\\\\winrt\" \"-IC:\\Program Files (x86)\\Windows Kits\\10\\\\include\\10.0.22621.0\\\\cppwinrt\" /Tcquickle.c /Fobuild\\temp.win-amd64-cpython-311\\Release\\quickle.obj\n",
-      "  quickle.c\n",
-      "  quickle.c(435): warning C4013: 'PyHeapType_GET_MEMBERS' undefined; assuming extern returning int\n",
-      "  quickle.c(435): warning C4047: 'initializing': 'PyMemberDef *' differs in levels of indirection from 'int'\n",
-      "  quickle.c(1574): warning C4013: '_PyFloat_Pack8' undefined; assuming extern returning int\n",
-      "  quickle.c(3479): warning C4013: '_PyFloat_Unpack8' undefined; assuming extern returning int\n",
-      "  \"C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.39.33519\\bin\\HostX86\\x64\\link.exe\" /nologo /INCREMENTAL:NO /LTCG /DLL /MANIFEST:EMBED,ID=2 /MANIFESTUAC:NO /LIBPATH:C:\\Users\\Ndona\\anaconda3\\envs\\NYT_Solvers\\libs /LIBPATH:C:\\Users\\Ndona\\anaconda3\\envs\\NYT_Solvers /LIBPATH:C:\\Users\\Ndona\\anaconda3\\envs\\NYT_Solvers\\PCbuild\\amd64 \"/LIBPATH:C:\\Program Files (x86)\\Microsoft Visual Studio\\2022\\BuildTools\\VC\\Tools\\MSVC\\14.39.33519\\lib\\x64\" \"/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\lib\\10.0.22621.0\\ucrt\\x64\" \"/LIBPATH:C:\\Program Files (x86)\\Windows Kits\\10\\\\lib\\10.0.22621.0\\\\um\\x64\" /EXPORT:PyInit_quickle build\\temp.win-amd64-cpython-311\\Release\\quickle.obj /OUT:build\\lib.win-amd64-cpython-311\\quickle.cp311-win_amd64.pyd /IMPLIB:build\\temp.win-amd64-cpython-311\\Release\\quickle.cp311-win_amd64.lib\n",
-      "     Creating library build\\temp.win-amd64-cpython-311\\Release\\quickle.cp311-win_amd64.lib and object build\\temp.win-amd64-cpython-311\\Release\\quickle.cp311-win_amd64.exp\n",
-      "  quickle.obj : error LNK2001: unresolved external symbol _PyFloat_Unpack8\n",
-      "  quickle.obj : error LNK2001: unresolved external symbol PyHeapType_GET_MEMBERS\n",
-      "  quickle.obj : error LNK2001: unresolved external symbol _PyFloat_Pack8\n",
-      "  build\\lib.win-amd64-cpython-311\\quickle.cp311-win_amd64.pyd : fatal error LNK1120: 3 unresolved externals\n",
-      "  error: command 'C:\\\\Program Files (x86)\\\\Microsoft Visual Studio\\\\2022\\\\BuildTools\\\\VC\\\\Tools\\\\MSVC\\\\14.39.33519\\\\bin\\\\HostX86\\\\x64\\\\link.exe' failed with exit code 1120\n",
-      "  [end of output]\n",
-      "  \n",
-      "  note: This error originates from a subprocess, and is likely not a problem with pip.\n",
-      "  ERROR: Failed building wheel for quickle\n",
-      "ERROR: Could not build wheels for quickle, which is required to install pyproject.toml-based projects\n"
+      "  Downloading quickle-0.4.0-cp39-cp39-win_amd64.whl.metadata (1.7 kB)\n",
+      "Downloading quickle-0.4.0-cp39-cp39-win_amd64.whl (46 kB)\n",
+      "   ---------------------------------------- 0.0/46.5 kB ? eta -:--:--\n",
+      "   -------- ------------------------------- 10.2/46.5 kB ? eta -:--:--\n",
+      "   -------------------------- ------------- 30.7/46.5 kB 435.7 kB/s eta 0:00:01\n",
+      "   ---------------------------------------- 46.5/46.5 kB 465.3 kB/s eta 0:00:00\n",
+      "Installing collected packages: quickle\n",
+      "Successfully installed quickle-0.4.0\n"
      ]
     }
    ],
@@ -69,8 +26,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-15T01:45:04.366455900Z",
-     "start_time": "2024-04-15T01:44:59.184407500Z"
+     "end_time": "2024-04-15T02:01:47.104486Z",
+     "start_time": "2024-04-15T02:01:42.839413700Z"
     }
    },
    "id": "32484433a750af5"
