--- a/Projects.ipynb
+++ b/Projects.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "4406305a",
+   "metadata": {},
+   "source": [
+    "All of this code can also be found on my github as an actual ipynb file. Highly recomend you read it there: https://github.com/NathanDonagi/NYT-Game-Solvers/blob/main/Projects.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c8091b2b-e962-4c6a-a3c5-8b22e93c726e",
    "metadata": {},
    "source": [
@@ -32,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d7f22ae",
+   "id": "17356ef8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,41 +88,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import defaultdict\n",
-    "import quickle\n",
-    "import os\n",
-    "\n",
-    "with open('wordlist.txt', 'r') as f:\n",
-    "    word_list = f.read().splitlines()\n",
-    "\n",
-    "with open('answers.txt', 'r') as f:\n",
-    "    answer_list = f.read().splitlines()\n",
-    "\n",
-    "pairings = defaultdict(lambda: {})\n",
-    "\n",
-    "def get_result(answer, guess):\n",
-    "    if answer in pairings and guess in pairings[answer]:\n",
-    "        return pairings[answer][guess]\n",
-    "    out = [\"b\"] * 5\n",
-    "    a_count = defaultdict(lambda: 0)\n",
-    "    g_count = defaultdict(lambda: 0)\n",
-    "    for a, b in zip(answer, guess):\n",
-    "        a_count[a] += 1\n",
-    "        g_count[b] += 1\n",
-    "\n",
-    "    for i, (a, b) in enumerate(zip(answer, guess)):\n",
-    "        if a == b:\n",
-    "            out[i] = 'g'\n",
-    "            a_count[a] -= 1\n",
-    "            g_count[b] -= 1\n",
-    "\n",
-    "    for i, b in enumerate(guess):\n",
-    "        if out[i] == 'g':\n",
-    "            continue\n",
-    "        if a_count[b]:\n",
-    "            a_count[b] -= 1\n",
-    "            out[i] = 'y'\n",
-    "    return \"\".join(out)"
+    "if os.path.exists('pairings.pickle'):\n",
+    "    print(\"precompute exists, begun reading\")\n",
+    "    with open('pairings.pickle', 'rb') as f:\n",
+    "        pairings = quickle.loads(f.read())\n",
+    "    print(\"precompute loaded\")\n",
+    "else:\n",
+    "    for answer in word_list:\n",
+    "        print(answer)\n",
+    "        for guess in word_list:\n",
+    "            res = get_result(answer, guess)\n",
+    "            pairings[answer][guess] = res\n",
+    "            if not res in pairings[guess]:\n",
+    "                pairings[guess][res] = []\n",
+    "            pairings[guess][res].append(answer)\n",
+    "    with open('pairings.pickle', 'wb') as f:\n",
+    "        f.write(quickle.dumps(dict(pairings)))\n",
+    "    print(\"precompute finished\")\n"
    ]
   },
   {
