--- a/Projects.ipynb
+++ b/Projects.ipynb
@@ -592,7 +592,7 @@
     "      return []\n",
     "  pos = get_not_overlapping(already_visited, pos)\n",
     "  output = [words]\n",
-    "  for word, cords in pos:\n",
+    "  for word, coords in pos:\n",
     "      output += dfs(words + (word,), already_visited+coords, pos)\n",
     "  mem.add(tuple(sorted(words)))\n",
     "  return output\n",
